--- a/apps/web/deployment.yml
+++ b/apps/web/deployment.yml
@@ -1,6 +1,12 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: web
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: web
   labels:
     app: web
   name: web
@@ -21,5 +27,5 @@ spec:
         app: web
     spec:
       containers:
-      - image: dnlloyd/basic-web-nginx:latest
+      - image: dnlloyd/basic-web-lighttpd:latest
         name: web
