--- a/clusters/my-cluster/my-web/web-kustomization.yaml
+++ b/clusters/my-cluster/my-web/web-kustomization.yaml
@@ -6,9 +6,10 @@ metadata:
   namespace: flux-system
 spec:
   interval: 5m0s
-  path: ./../../../apps/web/
+  path: ./apps/web
   prune: true
   sourceRef:
     kind: GitRepository
     name: my-eks-cluster
   targetNamespace: web
+
