--- a/clusters/my-cluster/basic-web-lighttpd-policy.yaml
+++ b/clusters/my-cluster/basic-web-lighttpd-policy.yaml
@@ -7,9 +7,7 @@ metadata:
 spec:
   imageRepositoryRef:
     name: basic-web-lighttpd
-  filterTags:
-    pattern: 'latest'
   policy:
-    alphabetical:
-      order: asc
+    semver:
+      range: 0.1.x
 
